--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ main {
   display: flex;
   justify-content: space-between;
 }
-.service-items{
+.service-items {
   width: 209px;
   height: 70px;
   margin-top: 27px;
@@ -125,14 +125,14 @@ main {
   height: 70px;
   background-color: #f3fcf7;
 }
-.service-logo i{
-  color: #06C167;
+.service-logo i {
+  color: #06c167;
   font-size: 32px;
   align-items: center;
-  margin:20px 20px;
+  margin: 20px 20px;
 }
 .services-ditails {
-    padding-left: 22px;
+  padding-left: 22px;
 }
 .services-ditails h3 {
   font-size: 17px;
@@ -144,3 +144,85 @@ main {
   font-weight: 500;
   padding-top: 7px;
 }
+/* Partners Service End  */
+
+/* benefit service Start  */
+.benefit {
+  width: 1138px;
+  height: 560.26px;
+  margin-top: 155px;
+  margin-left: 24px;
+  margin-right: 8px;
+}
+.our-benefit {
+  display: flex;
+}
+.photos-benefit1 {
+  border: 24px solid #f3fafb;
+  border-radius: 24px;
+  margin-right: 108px;
+}
+.benefit-ditails p {
+  margin-top: 64px;
+  font-size: 15px;
+  margin-bottom: 21px;
+}
+
+.benefit-ditails h1 {
+  width: 537px;
+  font-size: 60px;
+  font-weight: 60;
+  margin-bottom: 70px;
+}
+.benefit-items {
+  padding-top: 20px;
+}
+.benefit-items i {
+  color: #06c167;
+  font-size: 20px;
+  margin-right: 22px;
+}
+/* benefit service End  */
+
+/* star ditails Star */
+.our-star {
+  margin-top: 206px;
+  display: flex;
+}
+.star-ditalis h1 {
+  width: 570px;
+  font-size: 60px;
+  font-weight: 60;
+  padding-top: 20px;
+}
+.feedbacks {
+  display: flex;
+  width: 500px;
+}
+.feedback {
+  margin-top: 55px;
+  margin-right: 80px;
+  margin-bottom: 50px;
+  width: 108px;
+  height: 81px;
+}
+.feedback h1 {
+  color: #06c167;
+  margin-bottom: 15px;
+  font-size: 40px;
+  justify-content: center;
+}
+.feedback p {
+  width: 140px;
+}
+.star-img {
+  background-color: #f3fafb;
+  width: 541px;
+  height: 610px;
+}
+.star-img img {
+  margin-left: 96px;
+  width: 445px;
+  height: 512px;
+}
+/* star ditails Star */
